--- a/src/styles/device.css
+++ b/src/styles/device.css
@@ -99,6 +99,71 @@
   background-image: url("/Images/types/tv-white.svg");
 }
 
+.device-brand-list {
+  list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 40px 0 0 0;
+  overflow: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.device-brand-list::after {
+  content: "";
+  padding-left: 20px;
+}
+.device-brand-list::-webkit-scrollbar {
+  display: none;
+}
+@media (min-width: 576px) {
+  .device-brand-list {
+    margin: 50px 0 0 0;
+    justify-content: center;
+  }
+}
+
+.device-brand-list__item {
+  margin-left: 20px;
+}
+.device-brand-list__item-button {
+  padding: 8px 20px 8px 20px;
+  border-radius: 100px;
+  border: 2px solid #b1b1b1;
+  cursor: pointer;
+  background-color: white;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 25px;
+  text-align: center;
+  text-transform: capitalize;
+  
+  /* prevent button overflowing due to content */
+  display: inline-block;
+  white-space: nowrap;
+}
+
+.device-brand-list__item-button:hover {
+  border: 2px solid #0043e0;
+  background-color: #e5ecfc;
+}
+
+.device-brand-list__item-button--selected {
+  border: 2px solid #0043e0;
+  background-color: #0043e0;
+  color: white;
+}
+.device-brand-list__item-button--selected:hover {
+  /* remain unchanged */
+  background-color: #0043e0;
+  color: white;
+}
+
+@media (min-width: 576px) {
+  .device-brand-list__item:not(:first-child) {
+    margin-left: 30px;
+  }
+}
+
 .device-type__name {
   text-align: center;
   margin-top: 20px;
