Fix homepage Google Pixel label

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import { Image } from "@astrojs/image/components";
       <li class="quick-device-list__item quick-device-list__item-googlepixel">
         <a
           class="quick-device-list__link quick-device-list__link-googlepixel"
-          href="/device/google-pixel5-justblack">Google Pixel</a
+          href="/device/google-pixel5-justblack">Google Pixel 5</a
         >
       </li>
       <li class="quick-device-list__item quick-device-list__item-other">
