--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -249,6 +249,9 @@ main {
   border-radius: 10px;
   padding: 12px;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.06);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .file-list-item__filename {
