Implement color picker item tooltip on hover

--- a/src/pages/model/[model]/color/[color].astro
+++ b/src/pages/model/[model]/color/[color].astro
@@ -157,7 +157,9 @@ if (deviceDetail == null) {
                         ? "color-picker-item--selected"
                         : ""
                     }`}
-                  />
+                  >
+                    <div class="color-picker-item__tooltip">{d.color.name}</div>
+                  </a>
                 </li>
               ))
             }
