--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -396,6 +396,7 @@ main {
 }
 
 .color-picker-item {
+  position: relative;
   width: 30px;
   height: 30px;
   border: 3px white solid;
@@ -434,6 +435,34 @@ main {
 
 .color-picker-item-container:not(:first-child) {
   margin-left: 18px;
+}
+
+.color-picker-item .color-picker-item__tooltip {
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s;
+
+  background-color: white;
+
+  padding: 4px 8px;
+  border-radius: 4px;
+  border: 1px #e7e7e7 solid;
+
+  color: black;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18.5px;
+  text-align: center;
+  text-wrap: nowrap;
+
+  position: absolute;
+  z-index: 1;
+  top: 45px;
+  left: 30px;
+}
+.color-picker-item:hover .color-picker-item__tooltip {
+  visibility: visible;
+  opacity: 1;
 }
 
 .generate-btn {
