--- a/src/pages/model/[model]/color/[color].astro
+++ b/src/pages/model/[model]/color/[color].astro
@@ -87,6 +87,7 @@ if (deviceDetail == null) {
   ></script>
   <script type="text/javascript" src="/scripts/vendor/psd.min.js"></script>
   <script type="text/javascript" src="/scripts/utils/images.js"></script>
+  <script type="text/javascript" src="/scripts/utils/scroll.js"></script>
   <script type="text/javascript" src="/scripts/models/image-upload.js"></script>
   <script type="text/javascript" src="/scripts/upload.js"></script>
   <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"
@@ -119,6 +120,7 @@ if (deviceDetail == null) {
     </div>
 
     <div class="mockup-lg-right">
+      <div id="above-file-uploaded"></div>
       <section class="file-uploaded">
         <h3 class="file-uploaded__heading">FILE UPLOAD</h3>
         <div class="upload-guide">
