Add background text to device preview in upload page

--- a/src/pages/model/[model]/color/[color].astro
+++ b/src/pages/model/[model]/color/[color].astro
@@ -116,6 +116,7 @@ if (deviceDetail == null || model == null) {
             alt={deviceDetail.imagePath?.[0][1]}
           />
         </div>
+        <div class="upload__device-hint">Upload <br /> Image Here</div>
         <!-- FIXME: confirm if need uploading with webassembly or not -->
         <input type="hidden" name="phone" value={deviceDetail.device_id} />
       </div>
