--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -114,6 +114,21 @@ main {
   object-fit: contain;
 }
 
+.upload__device-hint {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  text-align: center;
+  font-weight: 700;
+  color: #b1b1b1;
+}
+
 .upload-guide {
   background-color: rgba(0, 67, 224, 0.05);
   display: flex;
