Use tippy for tooltips

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -39,6 +39,10 @@ const social_icon = "/Images/mockuphone-logo.png";
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/tippy.js@6/themes/light-border.css"
+    />
 
     <script type="text/javascript" src="/scripts/jquery/jquery-1.10.2.min.js"
     ></script>
@@ -56,6 +60,9 @@ const social_icon = "/Images/mockuphone-logo.png";
       defer
       data-domain="mockuphone.com"
       src="https://plausible.io/js/plausible.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/@popperjs/core@2"
+    ></script>
+    <script type="text/javascript" src="https://unpkg.com/tippy.js@6"></script>
     <script type="text/javascript" src="/scripts/main.js"></script>
     <!-- ${ self.javascript() } -->
 
