Fix location no longer have device id

--- a/src/pages/model/[model]/color/[color].astro
+++ b/src/pages/model/[model]/color/[color].astro
@@ -95,6 +95,7 @@ if (deviceDetail == null) {
 
   <script define:vars={{ deviceDetail }}>
     window.location.recommendsize = deviceDetail["display_resolution"];
+    window.deviceDetail = deviceDetail;
   </script>
 
   <script define:vars={{ deviceJson }}>
