--- a/src/pages/model/[model]/color/[color].astro
+++ b/src/pages/model/[model]/color/[color].astro
@@ -20,8 +20,8 @@ export async function getStaticPaths() {
       DEVICE_MANAGER.getDeviceListByModel(_modelId);
     allModelDevices.forEach((d: Device) => {
       const modelColorInfo = {
-        params: { model: _modelId, color: d.color.id },
-        props: { targetModel: _modelId, targetColor: d.color.id },
+        params: { model: _modelId, color: d.color?.id ?? "default" },
+        props: { targetModel: _modelId, targetColor: d.color?.id ?? "default" },
       };
       modelColorAll.push(modelColorInfo);
     });
@@ -145,30 +145,37 @@ if (deviceDetail == null) {
           }px, We support jpg, png and psd
         </p>
         <ul class="file-list"></ul>
-        <div class="color-section">
-          <h3 class="color-section__heading">COLOR</h3>
-          <p class="color-section__description">{deviceDetail.color.name}</p>
-          <div class="color-picker-scrollable">
-            <ul class="color-picker">
-              {
-                sameModelDevices.map((d) => (
-                  <li class="color-picker-item-container">
-                    <a
-                      href={`/model/${targetModel}/color/${d.color.id}`}
-                      style={{ backgroundColor: d.color.hexcode }}
-                      class={`color-picker-item ${
-                        d.color.id === targetColor
-                          ? "color-picker-item--selected"
-                          : ""
-                      }`}
-                      data-tippy-content={d.color.name}
-                    />
-                  </li>
-                ))
-              }
-            </ul>
-          </div>
-        </div>
+        {
+          deviceDetail.color == null ? undefined : (
+            <div class="color-section">
+              <h3 class="color-section__heading">COLOR</h3>
+              <p class="color-section__description">
+                {deviceDetail.color.name}
+              </p>
+              <div class="color-picker-scrollable">
+                <ul class="color-picker">
+                  {sameModelDevices.map((d) =>
+                    d.color == null ? undefined : (
+                      <li class="color-picker-item-container">
+                        <a
+                          href={`/model/${targetModel}/color/${d.color.id}`}
+                          style={{ backgroundColor: d.color.hexcode }}
+                          class={`color-picker-item ${
+                            d.color.id === targetColor
+                              ? "color-picker-item--selected"
+                              : ""
+                          }`}
+                          data-tippy-content={d.color.name}
+                        />
+                      </li>
+                    ),
+                  )}
+                </ul>
+              </div>
+            </div>
+          )
+        }
+
         <button disabled class="generate-btn">Generate product mockups</button>
         <button style="display:none" class="start-mockup-btn"
           >Generate product mockups</button
