--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -123,10 +123,16 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 30px;
+  font-size: 24px;
   text-align: center;
   font-weight: 700;
   color: #b1b1b1;
+}
+
+@media (min-width: 640px) {
+  .upload__device-hint {
+    font-size: 30px;
+  }
 }
 
 .upload-guide {
