Layout search bar in device list header

--- a/src/pages/type/[type].astro
+++ b/src/pages/type/[type].astro
@@ -35,7 +35,7 @@ const nonEmptyBrands: BrandEnum[] = Object.keys(brandThumbnailList)
 const brandList: Array<BrandEnum | "all"> = ["all", ...nonEmptyBrands];
 ---
 
-<BaseLayout>
+<BaseLayout shouldRenderSearchBar={true}>
   <meta
     slot="meta"
     name="description"
