--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,6 +9,7 @@ const description =
   "MockUPhone is a free tool that helps you wrap app screenshots in different mobile devices. Support iPhone mockup, iPad mockup, Android mockup and TV mockup.";
 const social_url = "home_url";
 const social_icon = "/Images/mockuphone-logo.png";
+const { shouldRenderSearchBar } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -124,6 +125,28 @@ const social_icon = "/Images/mockuphone-logo.png";
             height={48.5}
           />
         </a>
+        {
+          !!shouldRenderSearchBar ? (
+            <div class="header__search-container">
+              <div class="header__search-device__container device-list__search-container">
+                <img src="/Images/search.svg" />
+                <input
+                  class="header__search-device__input device-list__search-input"
+                  placeholder="Search Device"
+                  type="search"
+                />
+                <button
+                  class="header__search-device__clear-btn d-none device-list__search-input__clear-btn"
+                  data-tippy-content="Clear"
+                >
+                  <img src="/Images/cross-gray.svg" />
+                </button>
+              </div>
+              {/* Add suggestion list here */}
+            </div>
+          ) : undefined
+        }
+
         <div class="header__share">
           <Image
             class="header__share-small d-block d-sm-none"
