--- a/src/styles/device.css
+++ b/src/styles/device.css
@@ -1,3 +1,75 @@
+.header__search-container {
+  display: none;
+}
+
+@media (min-width: 992px) {
+  .header__search-container {
+    right: 5px;
+    position: absolute;
+    width: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.header__search-device__container {
+  max-width: 38%; /* 543 / 1440 */
+  flex: 1 1 0%;
+
+  margin: 0;
+  padding: 16px 20px;
+  display: flex;
+  height: 56px;
+  background: var(--white);
+  border: 1px solid var(--gray-5);
+  box-sizing: border-box;
+  border-radius: 9px;
+  column-gap: 12px;
+}
+
+@media (min-width: 992px) {
+  .header__search-device__container {
+    margin: 0 0 0 112px; /* to prevent search bar overlapping with mockuphone logo */
+  }
+}
+
+@media (min-width: 1300px) {
+  .header__search-device__container {
+    margin: 0;
+  }
+}
+
+.header__search-device__input {
+  flex: 1 1 0%;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  max-width: 90%;
+  min-width: 0;
+}
+
+.header__search-device__input::placeholder {
+  color: var(--gray-3);
+  font-size: 14px;
+}
+
+.header__search-device__clear-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  flex: none;
+  background-color: white;
+  padding: 12px;
+  margin: -12px;
+}
+
+.header__search-device__clear-btn:focus {
+  outline: none;
+}
+
 .device-type {
   padding: 50px 0;
 }
